<resources>
    <string name="app_name">Splintergod</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="battles">Battles</string>
    <string name="collection">Collection</string>
    <string name="balances">Balances</string>
    <string name="rewards">Rewards</string>
    <string name="rulesets">Rulesets</string>
    <string name="focuses">Focuses</string>
    <string name="abilities">Abilities</string>
    <string name="logout">Logout</string>
</resources>